# docs/swagger.json
@@ -13,6 +13,45 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/admin/:user_id": {
+            "get": {
+                "security": [
+                    {
+                        "GinJWTMiddleware": []
+                    }
+                ],
+                "description": "更新用户密码",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "后台用户管理"
+                ],
+                "summary": "更新用户密码",
+                "parameters": [
+                    {
+                        "description": "更新用户密码",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ums_admin.UmsAdminUpdatePasswordDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gin_common.GinCommonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/authTest": {
             "get": {
                 "description": "用户鉴权测试",
@@ -89,7 +128,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ums_admin.UmsAdminPage"
+                            "$ref": "#/definitions/ums_admin.UmsAdminPageDTO"
                         }
                     }
                 ],
@@ -123,7 +162,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ums_admin.UmsAdminLogin"
+                            "$ref": "#/definitions/ums_admin.UmsAdminLoginDTO"
                         }
                     }
                 ],
@@ -185,7 +224,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ums_admin.UmsAdminRegisterRequest"
+                            "$ref": "#/definitions/ums_admin.UmsAdminRegisterDTO"
                         }
                     }
                 ],
@@ -231,7 +270,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ums_admin.UmsAdminUpdate"
+                            "$ref": "#/definitions/ums_admin.UmsAdminUpdateDTO"
                         }
                     }
                 ],
@@ -296,7 +335,7 @@
                 }
             }
         },
-        "ums_admin.UmsAdminLogin": {
+        "ums_admin.UmsAdminLoginDTO": {
             "type": "object",
             "required": [
                 "password",
@@ -313,19 +352,19 @@
                 }
             }
         },
-        "ums_admin.UmsAdminPage": {
+        "ums_admin.UmsAdminPageDTO": {
             "type": "object",
             "required": [
-                "page_num",
-                "page_size"
+                "pageNum",
+                "pageSize"
             ],
             "properties": {
-                "page_num": {
+                "pageNum": {
                     "description": "页码",
                     "type": "integer",
                     "default": 1
                 },
-                "page_size": {
+                "pageSize": {
                     "description": "每页数量",
                     "type": "integer",
                     "default": 10
@@ -336,7 +375,7 @@
                 }
             }
         },
-        "ums_admin.UmsAdminRegisterRequest": {
+        "ums_admin.UmsAdminRegisterDTO": {
             "type": "object",
             "required": [
                 "password",
@@ -369,7 +408,7 @@
                 }
             }
         },
-        "ums_admin.UmsAdminUpdate": {
+        "ums_admin.UmsAdminUpdateDTO": {
             "type": "object",
             "required": [
                 "password",
@@ -394,6 +433,28 @@
                 },
                 "password": {
                     "description": "密文密码",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "用户名",
+                    "type": "string"
+                }
+            }
+        },
+        "ums_admin.UmsAdminUpdatePasswordDTO": {
+            "type": "object",
+            "required": [
+                "newPassword",
+                "oldPassword",
+                "username"
+            ],
+            "properties": {
+                "newPassword": {
+                    "description": "新密码",
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "description": "旧密码",
                     "type": "string"
                 },
                 "username": {
