# internal/request_dto/ums_admin/ums_admin_dto.go
@@ -10,8 +10,8 @@ package ums_admin
 
 import "github.com/hongjun500/mall-go/internal/request_dto/base"
 
-// UmsAdminRegisterRequest 用户注册请求参数
-type UmsAdminRegisterRequest struct {
+// UmsAdminRegisterDTO 用户注册请求参数
+type UmsAdminRegisterDTO struct {
 	// base.PageDTO
 
 	// 用户名
@@ -28,23 +28,23 @@ type UmsAdminRegisterRequest struct {
 	Note string `json:"note" form:"note"`
 }
 
-// UmsAdminLogin 用户登录请求参数
-type UmsAdminLogin struct {
+// UmsAdminLoginDTO 用户登录请求参数
+type UmsAdminLoginDTO struct {
 	// 用户名
 	Username string `json:"username" form:"username" binding:"required"`
 	// 密文密码
 	Password string `json:"password" form:"password" binding:"required"`
 }
 
-// UmsAdminPage 用户分页查询请求参数
-type UmsAdminPage struct {
+// UmsAdminPageDTO 用户分页查询请求参数
+type UmsAdminPageDTO struct {
 	base.PageDTO
 	// 用户名
 	Username string `json:"username" form:"username"`
 }
 
-// UmsAdminUpdate 用户更新请求参数
-type UmsAdminUpdate struct {
+// UmsAdminUpdateDTO 用户更新请求参数
+type UmsAdminUpdateDTO struct {
 	// 用户名
 	Username string `json:"username" form:"username" binding:"required"`
 	// 密文密码
@@ -57,4 +57,14 @@ type UmsAdminUpdate struct {
 	Nickname string `json:"nickname" form:"nickname"`
 	// 备注
 	Note string `json:"note" form:"note"`
+}
+
+// UmsAdminUpdatePasswordDTO 用户更新密码请求参数
+type UmsAdminUpdatePasswordDTO struct {
+	// 用户名
+	Username string `json:"username" form:"username" binding:"required"`
+	// 旧密码
+	OldPassword string `json:"oldPassword" form:"old_password" binding:"required"`
+	// 新密码
+	NewPassword string `json:"newPassword" form:"new_password" binding:"required"`
 }
